empty data in FileSystemData.txt issue fixed